2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	* flumotion/common/common.py:
	* flumotion/common/component.py:
	* flumotion/component/component.py:
	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/manager/component.py:
	  make mood into an enum

2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/common/worker.py:
	* flumotion/manager/worker.py:
	* flumotion/wizard/wizard.py:
	  make admin client notice when workers log in or out

2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/Makefile.am:
	* flumotion/manager/admin.py:
	* flumotion/manager/common.py:
	* flumotion/manager/component.py:
	* flumotion/manager/manager.py:
	* flumotion/manager/worker.py:
	  rename common to base since that's what it is

2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/admin/admin.py:
	* flumotion/common/common.py:
	* flumotion/common/component.py:
	* flumotion/common/worker.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_component.py:
	* flumotion/test/test_flavors.py:
	* flumotion/twisted/Makefile.am:
	* flumotion/twisted/flavors.py:
	  add flavors with StateCacheable/RemoteCache
	  add unittests
	  add possibility of monitoring lists and having append/remove
	  listener calls

2004-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/common/Makefile.am:
	* flumotion/common/common.py:
	* flumotion/common/component.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/component.py:
	* flumotion/manager/worker.py:
	* flumotion/test/test_common.py:
	* flumotion/test/test_common_component.py:
	* flumotion/test/test_wizard.py: