@@ -328,7 +328,7 @@
 	    <widget class="GtkHPaned" id="hpaned">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="position">260</property>
+	      <property name="position">320</property>
 
 	      <child>
 		<widget class="GtkScrolledWindow" id="scrolledwindow2">
@@ -360,7 +360,7 @@
 	      <child>
 		<widget class="GtkLabel" id="preview">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;preview area&gt;</property>
+		  <property name="label" translatable="yes"></property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
