@@ -30,7 +30,7 @@ from twisted.internet import reactor
 
 from flumotion.component import feedcomponent
 from flumotion.common import log
-from flumotion.common.common import moods
+from flumotion.common.component import moods
 from flumotion.utils import gstutils
 from flumotion.utils.gstutils import gsignal
 
@@ -153,7 +153,7 @@ class Disker(feedcomponent.ParseLaunchComponent, log.Loggable):
     def _feeder_state_change_cb(self, element, old, state):
         # FIXME: add more states
         if state == gst.STATE_PLAYING:
-            self.setMood(moods.HAPPY)
+            self.setMood(moods.happy)
             
     def link_setup(self, eaters, feeders):
         sink = self.get_element('fdsink')
